--- a/assets/css/graffiti.css
+++ b/assets/css/graffiti.css
@@ -33,7 +33,7 @@ a:hover {
 h1,
 h2,
 h3,
-h4,
+/* h4, */
 h5,
 h6 {
   font-family: "Sedgwick Ave Display", sans-serif;
@@ -345,7 +345,7 @@ h6 {
 
 #header.header-scrolled h1 a {
   margin: 0 0 10px 0;
-  font-size: 48px;
+  font-size: 44px;
   color: #fff;
   padding: 0;
   line-height: 56px;
@@ -451,13 +451,9 @@ h6 {
 
 .nav-menu > ul > li:hover,
 .nav-menu .active {
-  background: -wlinear-gradient(
-    rgb(128, 6, 155),
-    
-    rgb(248, 173, 60),
-    rgb(60, 214, 248),
-    rgb(60, 214, 248)
-  );
+  background: 
+    rgb(80, 189, 206)
+  ;
 }
 
 .nav-menu .drop-down ul {
@@ -469,7 +465,7 @@ h6 {
   opacity: 0;
   visibility: hidden;
   padding: 10px 0;
-  background: #fff;
+  background-color: rgba(127, 137, 161, 0.45);
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   transition: 0.3s;
 }
@@ -486,21 +482,18 @@ h6 {
 }
 
 .nav-menu .drop-down ul a {
-  padding: 10px 20px;
+  padding: 5px 10px;
   font-size: 14px;
   font-weight: 500;
   text-transform: none;
-  color: #191919;
+  color: #ffffff;
 }
 
 .nav-menu .drop-down ul a:hover,
 .nav-menu .drop-down ul .active > a,
 .nav-menu .drop-down ul li:hover > a {
-  color: linear-gradient(
-    rgb(90, 217, 231),
-    rgb(248, 173, 60),
-    rgb(248, 60, 60)
-  );
+  color: 
+    rgb(90, 217, 231);
 }
 
 .nav-menu .drop-down > a:after {
@@ -724,7 +717,7 @@ h6 {
 
 #hero h1 {
   margin: 0 0 10px 0;
-  font-size: 48px;
+  font-size: 44px;
   font-weight: 700;
   line-height: 56px;
   text-transform: uppercase;
@@ -1052,16 +1045,11 @@ section {
 }
 
 .experience .icon-box:hover {
-  background: linear-gradient(
-    rgb(90, 217, 231),
-    rgb(248, 173, 60),
-    rgb(248, 60, 60)
-  );
-  border-color: linear-gradient(
-    rgb(90, 217, 231),
-    rgb(248, 173, 60),
-    rgb(248, 60, 60)
-  );
+  background: 
+    rgb(32, 142, 154)
+   ;
+  border-color: #ffffff
+  ;
   padding: 20px 20px 20px 20px;
   margin-bottom: 20px;
   margin-top: -20px;
@@ -1072,14 +1060,14 @@ section {
 }
 
 .experience .icon-box:hover .icon i {
-  color: 
-    rgb(90, 217, 231)
+  color:  #e65225;
+   
     
-  ;
+  
 }
 
 .experience .icon-box:hover .icon::before {
-  background: #146b0f;
+  background: rgb(233, 215, 77);
 }
 
 .experience .icon-box:hover h4 a,
