--- a/assets/css/hookem.css
+++ b/assets/css/hookem.css
@@ -311,17 +311,6 @@ h6 {
   visibility: hidden;
 }
 
-/*#header .logo {
-        font-size: 28px;
-        margin: 0;
-        padding: 0;
-        line-height: 1;
-        font-weight: 700;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-        visibility:hidden;
-        
-    }*/
 
 #header.header-scrolled h1 a {
   margin: 0 0 10px 0;
@@ -432,7 +421,7 @@ h6 {
   opacity: 0;
   visibility: hidden;
   padding: 10px 0;
-  background: #fff;
+  background-color: rgba(127, 137, 161, 0.45);
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   transition: 0.3s;
 }
@@ -446,14 +435,15 @@ h6 {
 .nav-menu .drop-down li {
   min-width: 180px;
   position: relative;
+  
 }
 
 .nav-menu .drop-down ul a {
-  padding: 10px 20px;
+  padding: 5px 10px;
   font-size: 14px;
   font-weight: 500;
   text-transform: none;
-  color: #191919;
+  color: #ffffff;
 }
 
 .nav-menu .drop-down ul a:hover,
