--- a/assets/css/graffiti.css
+++ b/assets/css/graffiti.css
@@ -3,7 +3,7 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  color: #444444;
+  color: #585858;
 }
 em {
   color: linear-gradient(
@@ -33,6 +33,7 @@ a:hover {
 h1,
 h2,
 h3,
+span,
 /* h4, */
 h5,
 h6 {
@@ -175,6 +176,7 @@ h6 {
   bottom: 0;
   left: 0;
   right: 0;
+  color: #000;
   text-align: left;
   background-color: rgba(255, 255, 255, 0.8);
   opacity: 0;
@@ -208,11 +210,8 @@ h6 {
 }
 
 .custom_overlay h4:after {
-  background-color: linear-gradient(
-    rgb(90, 217, 231),
-    rgb(248, 173, 60),
-    rgb(248, 60, 60)
-  );
+  background-color: rgb(90, 217, 231);
+
   content: "";
   position: absolute;
   left: 0;
@@ -355,7 +354,6 @@ h6 {
   visibility: visible;
   background: -webkit-linear-gradient(
     rgb(128, 6, 155),
-    
     rgb(248, 173, 60),
     rgb(60, 214, 248),
     rgb(60, 214, 248)
@@ -363,7 +361,6 @@ h6 {
   background-clip: content-box;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
- 
 }
 
 #header h1 {
@@ -451,9 +448,7 @@ h6 {
 
 .nav-menu > ul > li:hover,
 .nav-menu .active {
-  background: 
-    rgb(80, 189, 206)
-  ;
+  background: rgb(80, 189, 206);
 }
 
 .nav-menu .drop-down ul {
@@ -492,8 +487,7 @@ h6 {
 .nav-menu .drop-down ul a:hover,
 .nav-menu .drop-down ul .active > a,
 .nav-menu .drop-down ul li:hover > a {
-  color: 
-    rgb(90, 217, 231);
+  color: rgb(90, 217, 231);
 }
 
 .nav-menu .drop-down > a:after {
@@ -716,14 +710,38 @@ h6 {
 }
 
 #hero h1 {
-  margin: 0 0 10px 0;
-  font-size: 44px;
+  z-index: 0;
+  
+  margin: 0 0 20px 0;
+  font-size: 46px;
   font-weight: 700;
-  line-height: 56px;
+  line-height: 0;
   text-transform: uppercase;
-  color: #fff;
+  color: #ffffff;
   opacity: 100;
   transition: ease-in 0.4s;
+}
+#hero span {
+  position: relative;
+  top: 30px;
+  font-weight: 700;
+  color: #f4f4f4;
+  left: 0;
+  right: 0;
+  z-index: 0;
+  letter-spacing: normal;
+  text-transform: uppercase;
+  font-size: 45px;
+  background: -webkit-linear-gradient(
+    rgb(128, 6, 155),
+    rgb(248, 173, 60),
+    rgb(60, 214, 248),
+    rgb(60, 214, 248)
+  );
+  background-clip: content-box;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  line-height: 65px;
 }
 
 #hero h2 {
@@ -799,6 +817,7 @@ h6 {
 section {
   padding: 60px 0;
   overflow: hidden;
+  background-color: rgba(47, 36, 30, 0.762);
 }
 
 .section-title {
@@ -806,9 +825,15 @@ section {
   padding: 30px 0;
   position: relative;
 }
+/* .section-title div {
+  text-align: center;
+  padding: 30px 0;
+  position: relative;
+  background-color: #f5a0a0;
+} */
 
 .section-title h2 {
-  font-size: 32px;
+  font-size: 45px;
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 20px;
@@ -821,14 +846,24 @@ section {
 .section-title span {
   position: absolute;
   top: 30px;
+  font-weight: 700;
   color: #f4f4f4;
   left: 0;
   right: 0;
   z-index: 1;
-  font-weight: 700;
-  font-size: 52px;
+  letter-spacing: normal;
   text-transform: uppercase;
-  line-height: 0;
+  font-size: 46px;
+  background: -webkit-linear-gradient(
+    rgb(128, 6, 155),
+    rgb(248, 173, 60),
+    rgb(60, 214, 248),
+    rgb(60, 214, 248)
+  );
+  background-clip: content-box;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  line-height: 62px;
 }
 
 .section-title p {
@@ -851,14 +886,24 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+.about .content {
+  box-shadow: 0px 2px 15px rgba(245, 242, 242, 0.639);
+  transition: all ease-in-out 0.3s;
+  border: 5px solid #191919;
+  background-color: #ffffff;
+}
+
 .about .content h3 {
   font-weight: 600;
   font-size: 26px;
+  padding-top: 10px;
+  font-family: "Open Sans", sans-serif;
 }
 
 .about .content ul {
   list-style: none;
   padding: 0;
+  border: #000;
 }
 
 .about .content ul li {
@@ -880,7 +925,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Why Us
+# Education
 --------------------------------------------------------------*/
 .education {
   padding-top: 50px;
@@ -888,17 +933,18 @@ section {
 
 .education .box {
   padding: 50px 30px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 15px rgba(245, 242, 242, 0.639);
   transition: all ease-in-out 0.3s;
   height: 435px;
+  border: 5px solid #191919;
+  background-color: #ffffff;
 }
 
 .education .box span {
   display: block;
   font-size: 22px;
   font-weight: 700;
-  color: linear-gradient(rgb(90, 217, 231), rgb(248, 173, 60), rgb(248, 60, 60))
-    82;
+  color: #191919;
 }
 
 .education .box img {
@@ -927,7 +973,7 @@ section {
   padding: 30px 30px 50px 30px;
   margin-top: -30px;
 
-  box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.18);
+  box-shadow: 10px 15px 30px rgba(245, 242, 242, 0.639);
 }
 
 /*--------------------------------------------------------------
@@ -966,8 +1012,10 @@ section {
 .experience .icon-box {
   text-align: center;
   padding: 20px 20px;
+  box-shadow: 0px 2px 15px rgba(245, 242, 242, 0.639);
   transition: all ease-in-out 0.3s;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  border: 5px solid #191919;
+  background-color: #ffffff;
 }
 
 .experience .icon-box .icon {
@@ -1031,6 +1079,7 @@ section {
   line-height: 24px;
   font-size: 14px;
   margin-bottom: 0;
+  color: #191919;
 }
 
 .experience .icon-box ul {
@@ -1042,14 +1091,12 @@ section {
   font-size: 14px;
   margin-bottom: 5px;
   text-align: left;
+  color: #000;
 }
 
 .experience .icon-box:hover {
-  background: 
-    rgb(32, 142, 154)
-   ;
-  border-color: #ffffff
-  ;
+  background: rgb(32, 142, 154);
+  border-color: #ffffff;
   padding: 20px 20px 20px 20px;
   margin-bottom: 20px;
   margin-top: -20px;
@@ -1060,10 +1107,7 @@ section {
 }
 
 .experience .icon-box:hover .icon i {
-  color:  #e65225;
-   
-    
-  
+  color: #e65225;
 }
 
 .experience .icon-box:hover .icon::before {
@@ -1120,7 +1164,11 @@ section {
 }
 
 .portfolio .portfolio-item {
-  margin-bottom: 30px;
+  margin: 10px;
+  box-shadow: 0px 2px 15px rgba(245, 242, 242, 0.639);
+  transition: all ease-in-out 0.3s;
+  border: 5px solid #191919;
+  background-color: #ffffff;
 }
 
 .portfolio .portfolio-item .portfolio-info {
@@ -1130,6 +1178,7 @@ section {
   right: 30px;
   bottom: 0;
   z-index: 3;
+  border: 2px solid #000;
   transition: all ease-in-out 0.3s;
   background: rgba(255, 255, 255, 0.9);
   padding: 15px;
@@ -1262,7 +1311,10 @@ section {
 .contact .info-box {
   color: #444444;
   text-align: center;
-  box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
+  box-shadow: 0px 2px 15px rgba(245, 242, 242, 0.639);
+  transition: all ease-in-out 0.3s;
+  border: 5px solid #191919;
+  background-color: #ffffff;
   padding: 20px 0 30px 0;
 }
 
@@ -1296,102 +1348,6 @@ section {
   line-height: 24px;
   font-size: 14px;
   margin-bottom: 0;
-}
-
-.contact .php-email-form {
-  box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
-  padding: 30px;
-}
-
-.contact .php-email-form .validate {
-  display: none;
-  color: red;
-  margin: 0 0 15px 0;
-  font-weight: 400;
-  font-size: 13px;
-}
-
-.contact .php-email-form .error-message {
-  display: none;
-  color: #fff;
-  background: #ed3c0d;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .sent-message {
-  display: none;
-  color: #fff;
-  background: #18d26e;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .loading {
-  display: none;
-  background: #fff;
-  text-align: center;
-  padding: 15px;
-}
-
-.contact .php-email-form .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
-  border-top-color: #eee;
-  -webkit-animation: animate-loading 1s linear infinite;
-  animation: animate-loading 1s linear infinite;
-}
-
-.contact .php-email-form input,
-.contact .php-email-form textarea {
-  border-radius: 0;
-  box-shadow: none;
-  font-size: 14px;
-}
-
-.contact .php-email-form input::focus,
-.contact .php-email-form textarea::focus {
-  background-color: linear-gradient(
-    rgb(90, 217, 231),
-    rgb(248, 173, 60),
-    rgb(248, 60, 60)
-  );
-}
-
-.contact .php-email-form input {
-  padding: 20px 15px;
-}
-
-.contact .php-email-form textarea {
-  padding: 12px 15px;
-}
-
-.contact .php-email-form button[type="submit"] {
-  background: linear-gradient(
-    rgb(90, 217, 231),
-    rgb(248, 173, 60),
-    rgb(248, 60, 60)
-  );
-  border: 0;
-  padding: 10px 24px;
-  color: #fff;
-  transition: 0.4s;
-}
-
-.contact .php-email-form button[type="submit"]:hover {
-  background: linear-gradient(
-      rgb(90, 217, 231),
-      rgb(248, 173, 60),
-      rgb(248, 60, 60)
-    )
-    82;
 }
 
 @-webkit-keyframes animate-loading {
@@ -1468,6 +1424,11 @@ section {
 .profile-carousel {
   position: relative;
   z-index: 1;
+  box-shadow: 0px 2px 15px rgba(245, 242, 242, 0.639);
+  transition: all ease-in-out 0.3s;
+  border: 5px solid #191919;
+  background-color: #ffffff;
+  padding-top: 3%;
 }
 
 .profile-carousel .owl-nav .owl-prev,
