--- a/assets/css/graffiti.css
+++ b/assets/css/graffiti.css
@@ -310,15 +310,22 @@ h6 {
   top: 0;
   background: rgba(0, 0, 0, 0.9);
 }
+#header .drop-down ul {
+  cursor: pointer;
+
+}
 #header.header-scrolled .drop-down ul{
   
+  cursor: pointer;
   background:  rgb(80, 189, 206) !important;
 }
 
 #header.header-scrolled .drop-down a:hover{
-   
+    
+  cursor: pointer;
   color: #000000 !important;
 }
+
 
 #header .header-scrolled a {
   font-size: 28px;
@@ -712,7 +719,7 @@ h6 {
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.0);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -763,6 +770,7 @@ h6 {
   margin-bottom: 20px;
   font-size: 24px;
   transition: ease-in-out 0.4s;
+  text-shadow: #000;
 }
 
 #hero h3 {
@@ -770,6 +778,8 @@ h6 {
   margin-bottom: 25px;
   font-size: 22px;
   transition: ease-in-out 0.4s;
+  text-shadow: #000;
+  text-decoration: #000000;
 }
 
 #hero .btn-meet-me {
@@ -1434,6 +1444,7 @@ section {
 
 .portfolio-details .portfolio-details-container {
   position: relative;
+ 
 }
 
 .profile-carousel {
@@ -1513,6 +1524,7 @@ section {
 
 .portfolio-details .portfolio-info {
   padding: 30px;
+  
   position: absolute;
   right: 0;
   bottom: -110px;
@@ -1540,7 +1552,10 @@ section {
 }
 
 .portfolio-details .portfolio-description {
-  padding-top: 3%;
+  background-color: ivory;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.5);
+  margin: 3%;
+  padding: 3%;
 }
 
 .portfolio-details .portfolio-description h2 {
