--- a/assets/css/undefinedStyle.css
+++ b/assets/css/undefinedStyle.css
@@ -282,15 +282,24 @@ body {
     background: rgba(0, 0, 0, 0.9);
   }
   #header.header-scrolled .drop-down ul {
-     
+   cursor: pointer;  
     background: #000000 !important;
   }
+  #header .drop-down ul {
+    cursor: pointer;
+
+  }
+  #header .drop-down ul:hover{
+    cursor: pointer;
+    color: #000000 !important;
+  }
   #header.header-scrolled li>a{
-     
+    
     color: #74e206 !important;
   }
   #header.header-scrolled  a:hover{
-     
+    
+    cursor: pointer;
     color: #ffffff !important;
   }
   
@@ -655,11 +664,11 @@ body {
   #hero {
     width: 100%;
     height: 100vh;
-    /* background: url("../img/hero-bg.jpg") top center; */
-    background: #000001;
+    background: url("../img/hero-bg.jpg") top center;
+    
     background-size: cover;
     position: relative;
-    transition: all 0.9s;
+    /* transition: all 0.9s; */
   }
   
   #hero.hero-scrolled h1 {
@@ -677,7 +686,7 @@ body {
   
   #hero:before {
     content: "";
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 1);
     position: absolute;
     bottom: 0;
     top: 0;
@@ -751,7 +760,10 @@ body {
   }
   
   #hero .btn-meet-me:hover {
-    font-family: "Share Tech Mono", sans-serif;
+    font-family: "Open Sans", sans-serif;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 14px;
     background: #42df0d;
     border-color: #42df0d;
     border-radius: 16px;
@@ -1447,8 +1459,8 @@ body {
     z-index: 1;
     /* box-shadow: 0px 2px 15px rgba(245, 242, 242, 1); */
     transition: all ease-in-out 0.3s;
-    border-style: none dashed dashed dashed;
-    border: 5px #42df0d;
+   
+    border: 5px dotted transparent;
     background-color: #000001;
     padding-top: 3%;
   }
