--- a/assets/css/hookem.css
+++ b/assets/css/hookem.css
@@ -269,7 +269,7 @@ h6 {
 --------------------------------------------------------------*/
 #header {
   background: rgba(52, 58, 64, 0.2);
-  transition: all 0.9s;
+  /* transition: all 0.9s; */
   z-index: 997;
   top: 40px;
 }
@@ -434,14 +434,15 @@ h6 {
   display: block;
   position: absolute;
   left: 0;
-  top: calc(100% + 30px);
+  /* top: calc(100% + 30px); */
+  top: 100%;
   z-index: 99;
   opacity: 0;
   visibility: hidden;
   padding: 10px 0;
   background-color: rgba(127, 137, 161, 0.45);
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  transition: 0.3s;
+  transition: 0.5s;
 }
 
 .nav-menu .drop-down:hover > ul {
