--- a/assets/css/undefinedStyle.css
+++ b/assets/css/undefinedStyle.css
@@ -272,7 +272,7 @@ body {
   --------------------------------------------------------------*/
   #header {
     background: rgba(52, 58, 64, 0.2);
-    transition: all 0.9s;
+    /* transition: all 0.9s; */
     z-index: 997;
     top: 40px;
   }
@@ -443,14 +443,15 @@ body {
     display: block;
     position: absolute;
     left: 0;
-    top: calc(100% + 30px);
+    /* top: calc(100% + 30px); */
+    top : 100%;
     z-index: 99;
     opacity: 0;
     visibility: hidden;
     padding: 10px 0;
     /* background-color: rgba(127, 137, 161, 0.45);
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25); */
-    transition: 0.3s;
+    transition: 0.5s;
   }
   
   .nav-menu .drop-down:hover > ul {
@@ -1408,7 +1409,7 @@ body {
   --------------------------------------------------------------*/
   .breadcrumbs {
     padding: 15px 0;
-    background: #efefef;
+    background: #000001;
     margin-top: 58px;
   }
   
