--- a/assets/css/hookem.css
+++ b/assets/css/hookem.css
@@ -269,7 +269,7 @@ h6 {
 --------------------------------------------------------------*/
 #header {
   background: rgba(52, 58, 64, 0.2);
-  /* transition: all 0.9s; */
+  transition: all 0.9s;
   z-index: 997;
   top: 40px;
 }
