--- a/assets/css/sonic.css
+++ b/assets/css/sonic.css
@@ -1556,7 +1556,8 @@ body {
     width: 50%;
     font-size: 28px;
     font-weight: 700;
-    margin-bottom: 80px;
+    margin-top: 80px;
+    margin-bottom: 20px;
   }
   
   .portfolio-details .portfolio-description p {
